--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <ul class="nav-links">
     <li><a href="https://www.instagram.com/whatsthestore?igsh=MTBieXMzMWRqczR5NQ==" target="_blank">Instagram</a></li>
     <li><a href="https://whatsthestore.empretienda.com.ar/" target="_blank">Tienda</a></li>
-    <li><a href="https://discord.gg/xWSXe99s" target="_blank">Foro</a></li>
+    <li><a href="https://discord.gg/NpY35Zc7" target="_blank">Foro</a></li>
     <li><a href="https://nosotros-wts.my.canva.site/" target="_blank"> Conocenos <br></a></li>
   </ul>
 
